--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - API_KEY=demo-key
       - JWT_SECRET_KEY=secret
-      - REDIS_URL=redis://redis:6379
+      - REDIS_URL=redis://default:nE0zpDvs4YUqyCf71of41Qn2GAaeuLQR@redis-18540.c270.us-east-1-3.ec2.redns.redis-cloud.com:18540
     depends_on:
       - redis
       - prometheus
